<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stores"
        android:icon="@drawable/ic_store"
        android:title="@string/title_stores" />

    <item
        android:id="@+id/navigation_insurance"
        android:icon="@drawable/ic_insurance"
        android:title="@string/title_insurance" />

    <item
        android:id="@+id/navigation_wealth"
        android:icon="@drawable/ic_wealth"
        android:title="@string/title_wealth" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />
</menu> 